--- a/PetShop-Client/client/package.json
+++ b/PetShop-Client/client/package.json
@@ -14,11 +14,15 @@
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bootstrap": "^5.2.3",
+    "localforage": "^1.10.0",
     "lodash": "^4.17.21",
+    "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
-    "react-toastify": "^9.1.1"
+    "react-router-dom": "^6.8.2",
+    "react-toastify": "^9.1.1",
+    "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
