--- a/PetShop-Client/client/package.json
+++ b/PetShop-Client/client/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "localforage": "^1.10.0",
     "lodash": "^4.17.21",
